Fixes multiple duties in the same line in the duty roster causing the unassigned lines to overlap Fixes alignment of unassigned lines

--- a/src/app/components/SheriffUnassignedBar/SheriffUnassignedBar.css
+++ b/src/app/components/SheriffUnassignedBar/SheriffUnassignedBar.css
@@ -4,7 +4,7 @@
     align-content: stretch;
     align-items: stretch;
     flex-direction: column;
-
+    cursor: auto;
 }
 
 .sheriff-unassigned-bar .remove-assignment-btn{
